Update certification page

--- a/elements.html
+++ b/elements.html
@@ -126,7 +126,7 @@
 
             <!-- Certificates List -->
             <section class="posts" id="certifications">
-                <article class="certificate" data-topic="data">
+                <article class="certificate" data-topic="data python sql">
                     <header>
                         <span class="date">Issued: July 23, 2024</span>
                         <h2><a>Data Analyst Course:<br />
@@ -174,7 +174,31 @@
                         <li><a href="https://www.sololearn.com/en/certificates/CC-0SY1DC7W" class="button">Link to Certification Page</a></li>
                     </ul>
                 </article>
-                <article class="certificate" data-topic="data">
+                <article class="certificate" data-topic="python">
+                    <header>
+                        <span class="date">Issued: January 18, 2024</span>
+                        <h2><a>Python<br />
+                            Essentials</a></h2>
+                    </header>
+                    <a class="image fit"><img src="images\IMG_AICEss.png" alt="" /></a>
+                    <p>Showcases the certificate earned at AI Core for mastering the fundamentals of Python.</p>
+                    <ul class="actions special">
+                        <li><a href="https://portal.theaicore.com/showcase/certificate/2/540e1ff8-5aef-416e-823d-839a6abfba41-0512f96d-35b3-49f5-a883-6a0c647439dd" class="button">Link to Certification Page</a></li>
+                    </ul>
+                </article>
+                <article class="certificate" data-topic="python">
+                    <header>
+                        <span class="date">Issued: February 06, 2024</span>
+                        <h2><a>Python<br />
+                            Basics</a></h2>
+                    </header>
+                    <a class="image fit"><img src="images\IMG_AICBas.png" alt="" /></a>
+                    <p>Showcases the certificate earned at AI Core for mastering the basics of Python.</p>
+                    <ul class="actions special">
+                        <li><a href="https://portal.theaicore.com/showcase/certificate/2/540e1ff8-5aef-416e-823d-839a6abfba41-33168487-fc50-4c9a-8e15-533a32e26516" class="button">Link to Certification Page</a></li>
+                    </ul>
+                </article>
+                <article class="certificate" data-topic="data python">
                     <header>
                         <span class="date">Issued: May 24, 2024</span>
                         <h2><a>Coding<br />
@@ -196,6 +220,54 @@
                     <p>In the SQL Intermediate course, I deepened my understanding of data manipulation and querying techniques. The course began with string functions, mathematical operations, and aggregate functions, followed by a comprehensive look at the CASE statement for conditional logic. It covered essential table constraints, including identity columns, primary and foreign keys, and unique constraints to enforce data integrity. Additionally, I learned to work with multiple tables using various join types and the UNION operator to combine results. The course culminated in applying these skills to real-world queries, such as calculating averages and handling complex data relationships.</p>
                     <ul class="actions special">
                         <li><a href="https://www.sololearn.com/en/certificates/CC-P4ROTLJA" class="button">Link to Certification Page</a></li>
+                    </ul>
+                </article>
+                <article class="certificate" data-topic="python">
+                    <header>
+                        <span class="date">Issued: October 02, 2024</span>
+                        <h2><a>Python<br />
+                            Programming</a></h2>
+                    </header>
+                    <a class="image fit"><img src="images\IMG_AICProg.png" alt="" /></a>
+                    <p>Showcases the certificate earned at AI Core for mastering skills related to programming in Python.</p>
+                    <ul class="actions special">
+                        <li><a href="https://portal.theaicore.com/showcase/certificate/2/540e1ff8-5aef-416e-823d-839a6abfba41-eb41cda2-b22b-4f88-a53b-a5d60a6b32d4" class="button">Link to Certification Page</a></li>
+                    </ul>
+                </article>
+                <article class="certificate" data-topic="data python sql">
+                    <header>
+                        <span class="date">Issued: October 14, 2024</span>
+                        <h2><a>Python Exploratory<br />
+                            Data Analytics</a></h2>
+                    </header>
+                    <a class="image fit"><img src="images\IMG_AICEda.png" alt="" /></a>
+                    <p>Showcases the certificate earned at AI Core for successfully completing the Exploratory Data Analytics course in Python.</p>
+                    <ul class="actions special">
+                        <li><a href="https://portal.theaicore.com/showcase/certificate/2/540e1ff8-5aef-416e-823d-839a6abfba41-249097d4-6e94-4420-a780-0afc37cc2c7e" class="button">Link to Certification Page</a></li>
+                    </ul>
+                </article>
+                <article class="certificate" data-topic="python">
+                    <header>
+                        <span class="date">Issued: September 24, 2024</span>
+                        <h2><a>Python<br />
+                            Software Engineering</a></h2>
+                    </header>
+                    <a class="image fit"><img src="images\IMG_AICSEng.png" alt="" /></a>
+                    <p>Showcases the certificate earned at AI Core for successfully completing the Software Engineering course in Python.</p>
+                    <ul class="actions special">
+                        <li><a href="https://portal.theaicore.com/showcase/certificate/2/540e1ff8-5aef-416e-823d-839a6abfba41-4781f4cc-2a3a-420c-adb6-271ba141bf8a" class="button">Link to Certification Page</a></li>
+                    </ul>
+                </article>
+                <article class="certificate" data-topic="data sql">
+                    <header>
+                        <span class="date">Issued: November 30, 2024</span>
+                        <h2><a>Data<br />
+                            Analytics</a></h2>
+                    </header>
+                    <a class="image fit"><img src="images\IMG_AICData.png" alt="" /></a>
+                    <p>Showcases the certificate earned at AI Core for successfully completing the Power BI Data Analytics course.</p>
+                    <ul class="actions special">
+                        <li><a href="https://portal.theaicore.com/showcase/certificate/2/540e1ff8-5aef-416e-823d-839a6abfba41-443e64e3-24a5-4df8-b4fa-51d3e805f8c3" class="button">Link to Certification Page</a></li>
                     </ul>
                 </article>
             </section>
@@ -258,6 +330,24 @@
 
         // Trigger change event on page load to display all certificates
         document.getElementById('topicSelect').dispatchEvent(new Event('change'));
+    </script>
+    <script>
+        const topicSelect = document.getElementById('topicSelect');
+        const certificates = document.querySelectorAll('.certificate');
+
+        topicSelect.addEventListener('change', function () {
+            const selectedTopic = this.value;
+
+            certificates.forEach(cert => {
+                const certTopics = cert.getAttribute('data-topic').split(' '); // Split topics by space
+
+                if (selectedTopic === 'all' || certTopics.includes(selectedTopic)) {
+                    cert.style.display = 'block'; // Show matching certificates
+                } else {
+                    cert.style.display = 'none'; // Hide non-matching certificates
+                }
+            });
+        });
     </script>
 </body>
 </html>
