--- a/generic.html
+++ b/generic.html
@@ -146,9 +146,10 @@
 										<option value="">Select a project</option>
 										<option value="project1">Camera Vision RPS</option>
 										<option value="project2">Webscraper</option>
-										<option value="project3">File Organiser</option>
-										<option value="project4">Hangman</option>
-										<option value="project5">BMI Calculator</option>
+										<option value="project3">Pong</option>
+										<option value="project4">File Organiser</option>
+										<option value="project5">Hangman</option>
+										<option value="project6">BMI Calculator</option>
 									</select>
 									<div id="python-project1" class="project-description">
 										<p>This project allows the user to play Rock, Paper, Scissors using a trained machine learning model and a device camera to capture user input. Users make hand gestures representing rock, paper, or scissors, which the model recognizes. The class includes methods for capturing the user's gesture, making a prediction using the model, and determining the game's outcome. The project demonstrates skills in machine learning model integration, computer vision with OpenCV, real-time video processing, and game logic implementation in Python.</p>
@@ -157,12 +158,15 @@
 										<p>This project focuses on webscraping, which is useful for extracting information from  web pages. Once it receives a URL, it fetches content from the web page and parses it using the BS4 module. This project in particular extracts team stats of NHL teams since 1990. This project showcases skills in web scraping, HTML parsing, error handling, and data extraction, demonstrating the ability to automate the collection of web-based data efficiently.</p>
 									</div>
 									<div id="python-project3" class="project-description">
-										<p>In this project I have created a file organising class which is designed to organize files in a specified directory by their extensions. The program begins by listing all file extensions in the directory and creates corresponding folders for each unique extension. It then sorts the files into these folders based on their extensions. The class demonstrates capabilities in file system navigation, directory creation, and file manipulation using Python's os and shutil libraries. This project showcases my proficiency in automating tasks, handling file operations, and working with Python's built-in libraries. In this folder you will also find the notebook where I created drafts and essentially used it as a sandbox for this project.</p>
+										<p>This project implements a Pong game in Python using the Pygame library, with two gameplay modes: a 2-player mode where players compete locally, and an AI mode where a player competes against an AI-controlled paddle with adjustable difficulty levels. The game features dynamic scoring, series play, sound effects, and customizable settings such as maximum series games and AI difficulty. It demonstrates skills in game development with Pygame, basic AI implementation, user input handling, game state management, and sound integration.</p>
 									</div>
 									<div id="python-project4" class="project-description">
-										<p>This project is the Hangman game everybody knows and loves. It initializes with a list of words that the user can change as they wish, with a set number of lives. The class includes methods to check if a guessed letter is in the chosen word, update the word display, track the guessed letters, and reduce lives for incorrect guesses. The game features a visual representation of the hangman state and handles user input to ensure valid guesses. This project showcases skills in game logic development, user interaction handling, and basic graphics representation in text form.</p>
+										<p>In this project I have created a file organising class which is designed to organize files in a specified directory by their extensions. The program begins by listing all file extensions in the directory and creates corresponding folders for each unique extension. It then sorts the files into these folders based on their extensions. The class demonstrates capabilities in file system navigation, directory creation, and file manipulation using Python's os and shutil libraries. This project showcases my proficiency in automating tasks, handling file operations, and working with Python's built-in libraries. In this folder you will also find the notebook where I created drafts and essentially used it as a sandbox for this project.</p>
 									</div>
 									<div id="python-project5" class="project-description">
+										<p>This project is the Hangman game everybody knows and loves. It initializes with a list of words that the user can change as they wish, with a set number of lives. The class includes methods to check if a guessed letter is in the chosen word, update the word display, track the guessed letters, and reduce lives for incorrect guesses. The game features a visual representation of the hangman state and handles user input to ensure valid guesses. This project showcases skills in game logic development, user interaction handling, and basic graphics representation in text form.</p>
+									</div>
+									<div id="python-project6" class="project-description">
 										<p>In this project, I developed a Python class that calculates Body Mass Index (BMI) and categorizes the result into weight groups. The program begins by prompting the user to input their height and weight, with error handling to ensure valid inputs. It then calculates the BMI and prints the result. Finally, the program evaluates the BMI and assigns it to a category: underweight, healthy range, overweight, obese, or severely obese. This project demonstrates my skills in user input handling, mathematical computation, and conditional logic.</p>
 									</div>
 									<ul class="actions special spacing">
