--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							</ul>
 							<p>Driven by a commitment to excellence and a passion for continuous learning, I am poised to make significant contributions to any team or project. My comprehensive skill set in Power BI, SQL, Tableau, and Excel, combined with my diverse professional background, equips me to deliver actionable insights that drive informed decision-making.</p>
 								<ul class="actions special">
-									<li><a href="Minhaz CV AICore V3 PDF.pdf" download class="button large">Download CV</a></li>
+									<li><a href="Minhaz CV (4).pdf" download class="button large">Download CV</a></li>
 									<li><a href="DA Cover Letter - TeX.pdf" download class="button large">Download Cover Letter</a></li>
 								</ul>
 							<a class="image main"><img src="images/pic001.jpg" alt="" /></a>
