Update pbi section

--- a/generic.html
+++ b/generic.html
@@ -218,13 +218,21 @@
 									<p id="pbi-general" class="general-description">Power BI projects I have completed, all of which require understanding of DAX. Each folder includes the raw dataset as well as the dashboards created in Power BI.</p>
 									<select onchange="showDescription('pbi', this.value)">
 										<option value="">Select a project</option>
-										<option value="project1">Plant Database</option>
-										<option value="project2">Project 1</option>
+										<option value="project1">Retail EDA</option>
+										<option value="project2">Superstore Dashboard</option>
+										<option value="project3">Plant Database</option>
+										<option value="project4">Youtube Survey</option>
 									</select>
 									<div id="pbi-project1" class="project-description">
-										<p>This Power BI project focused on creating a condensed, dynamic performance report which capitalised and made use of switch measures and conditional formatting. This project also had a heavy amount of DAX involved to create calculated columns and various other measures that would go on to aid in creating this final report.</p>
+										<p>This Power BI project involved building a comprehensive Power BI report for a medium-sized international retailer, focusing on transforming disparate sales data into actionable business insights. It included importing and cleaning data from multiple sources, creating measures and new tables, and designing a star-schema data model. The final multi-page report provided high-level summaries for executives, customer segmentation by region, product performance analysis against sales targets, and interactive map visuals showcasing retail outlet metrics. Additionally, SQL queries were developed to offer clients key data insights without requiring access to Power BI.</p>
 									</div>
 									<div id="pbi-project2" class="project-description">
+										<p>This Power BI project involved creating a comprehensive dashboard for a superstore, focusing on sales performance analysis. The dashboard includes key metrics such as total sales, profit, and quantity sold, with visualizations like bar charts and line graphs to track trends over time. It also features slicers for filtering data by region, category, and subcategory, allowing users to drill down into specific areas of interest. The project demonstrates the ability to transform raw data into actionable insights through effective data visualization techniques.</p>
+									</div>
+									<div id="pbi-project3" class="project-description">
+										<p>This Power BI project focused on creating a condensed, dynamic performance report which capitalised and made use of switch measures and conditional formatting. This project also had a heavy amount of DAX involved to create calculated columns and various other measures that would go on to aid in creating this final report.</p>
+									</div>
+									<div id="pbi-project4" class="project-description">
 										<p>This Power BI report is based on a YouTube survey taken which asked viewers career-focused, demographic questions. These questions were mainly targeted at viewers who had intentions of transitioning into data, and other future career aspirations they had. Unlike the plant database report which was heavily business focused, this was more focused on visualising data so one can get a good spread of what their viewers think about their current careers and what they hope for the future when it comes to data-centric careers. As this was a survey which involved various open-ended questions, heavy amounts of data-cleaning was required which followed a lot of data standardisation. A final report was created which displays all the relevant information in an aesthetically pleasing, easy to read format.</p>
 									</div>
 									<ul class="actions special spacing">
